thêm phần title, mess and more

--- a/k23cnt3.lucvanson.project3/k23cnt3.lucvanson.project3/src/main/resources/templates/LvsAreas/LvsAdmin/LvsFragments/LvsHeader.html
+++ b/k23cnt3.lucvanson.project3/k23cnt3.lucvanson.project3/src/main/resources/templates/LvsAreas/LvsAdmin/LvsFragments/LvsHeader.html
@@ -92,6 +92,13 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
+                                <!-- User Area Button -->
+                                <li><a class="dropdown-item py-2 hover-lift text-primary"
+                                        th:href="@{/LvsUser/LvsDashboard}"><i class="fas fa-home me-3"></i>Về trang
+                                        User</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
                                 <li>
                                     <a th:href="@{/LvsAdmin/LvsLogout}"
                                         class="dropdown-item text-danger py-2 hover-lift w-100 text-start">
