--- a/k23cnt3.lucvanson.project3/k23cnt3.lucvanson.project3/src/main/resources/templates/LvsAreas/LvsUsers/LvsSecurity/LvsLogin.html
+++ b/k23cnt3.lucvanson.project3/k23cnt3.lucvanson.project3/src/main/resources/templates/LvsAreas/LvsUsers/LvsSecurity/LvsLogin.html
@@ -95,7 +95,7 @@
         </div>
 
         <div class="text-center mt-6">
-            <a href="/" class="text-gray-400 hover:text-white transition inline-flex items-center gap-2">
+            <a th:href="@{/lvsforum}" class="text-gray-400 hover:text-white transition inline-flex items-center gap-2">
                 <i class="fas fa-arrow-left"></i><span>Quay lại trang chủ</span>
             </a>
         </div>
